# gh-md-to-moodle

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  gh_md_to_moodle.py  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build.yml
gh_md_to_moodle/: main.py
gh_md_to_moodle/resources/: add_style.js
tests/: gh_md_to_moodle_test.py  main_test.py
