[metadata]
name = gh_md_to_moodle
version = 0.0.0
description = A tool to convert markdown to into gh styled html
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RUBclim/gh-md-to-moodle
author = Jonas Kittner
author_email = theendlessriver13@users.noreply.github.com
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = gh_md_to_moodle
install_requires =
    gh-md-to-html>=1.6.4
    importlib-metadata;python_version<"3.8"
    importlib-resources;python_version<"3.8"
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    gh-md-to-moodle = gh_md_to_moodle:main

[options.package_data]
pre_commit.resources =
    resources

[bdist_wheel]
universal = True
