[metadata]
name = gh_md_to_moodle
version = 1.1.2
description = A tool to convert markdown to into gh styled html
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RUBclim/gh-md-to-moodle
author = Jonas Kittner
author_email = theendlessriver13@users.noreply.github.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    gh-md-to-html>=1.9.6
    importlib-metadata;python_version<"3.8"
    importlib-resources;python_version<"3.8"
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    gh-md-to-moodle = gh_md_to_moodle.main:main

[options.package_data]
gh_md_to_moodle.resources =
    *.js

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unreachable = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
